--- a/DCrmEditableGridIHtml.html
+++ b/DCrmEditableGridIHtml.html
@@ -12,7 +12,7 @@
     <script src="dcrmeg_jqdtpj"></script>
     <!-- aes Crypto.js -->
     <script src="dcrmeg_aes"></script>
-    <!-- XrmServiceToolkit -->
+    <!-- XrmServiceToolkit 2.2.1 modified -->
     <script src="dcrmeg_xrmservicetoolkit"></script>
     <!-- Xdate -->
     <script src="dcrmeg_xdate"></script>
@@ -214,6 +214,28 @@
         </div>
     </div>
 
+    <div id="products_flyoutOverlay" class="flyoutOverlay">
+        <div id="productsoverlay_content" class="flyoutproductscontent">
+            <div>
+                <table id="products_table" class="products_fixed_headers">
+                    <thead>
+                        <tr>
+                            <th><input id="products_selectall" type="checkbox" /></th>
+                            <th>Product</th>
+                            <th>Unit</th>
+                            <th>PriceList</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+            <div id="products_btncontainer" class="flyoutOverlaybtncontainer">
+                <button id="products_btnok" class="flyoutOverlaybtn">Ok</button>
+                <button id="products_btncancel" class="flyoutOverlaybtn">Cancel</button>
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript">
 
