--- a/configformhtml.html
+++ b/configformhtml.html
@@ -127,6 +127,18 @@
                             <input type="checkbox" checked="checked" id="displayclonerecord" />
                         </div>
                     </div>
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label for="openrecordbehavoir" class="ElipseText" id="openrecordbehavoirlabel">Open record button behavior</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <select id="openrecordbehavoir" class="displayonentityclass">
+                                <option value="10" selected="selected">Same window</option>
+                                <option value="20">New window</option>
+                            </select>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
@@ -222,6 +234,11 @@
                             <option value="20">20</option>
                             <option value="30">30</option>
                             <option value="40">40</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
+                            <option value="150">150</option>
+                            <option value="200">200</option>
+                            <option value="250">250</option>
                         </select>
                     </div>
                 </div>
