--- a/DCrmEditableGridIHtml.html
+++ b/DCrmEditableGridIHtml.html
@@ -33,8 +33,8 @@
 </head>
 <body>
     <div id="parentcontainer" style="width:98%;">
-        <div id="validationerror" class="verror" style="display:none;">Requiered Field.</div>
-        <div id="inputformaterror" class="verror" style="display:none;">Invalid format.</div>
+        <div id="validationerror" class="verror" style="display:none;">Requiered Field</div>
+        <div id="inputformaterror" class="verror" style="display:none;">Invalid format</div>
     </div>
 
     <div id="dcrmegProcessingDialog" class="dcrmegdialogprocessing">
