--- a/configformhtml.html
+++ b/configformhtml.html
@@ -616,6 +616,17 @@
         </div>
     </div>
 
+    <div id="listoflookupentityfieldsflyout" class="flyoutOverlay">
+        <div class="flyoutOverlayContentLookupFields">
+            <div style="margin-bottom:5px;"><h3 id="listoflookupentityfieldstitle"></h3></div>
+            <div class="checklistcontainer" id="listoflookupentityfieldstoselect"></div>
+            <div class="flyoutOverlayContentBtns">
+                <button id="listoflookupfieldstoselectokbtn">OK</button>
+                <button id="listoflookupfieldstoselectcancelbtn">Cancel</button>
+            </div>
+        </div>
+    </div>
+
     <div id="picklistconditionflyout" class="picklistflyoutOverlay">
         <div class="picklistflyoutOverlayContent">
             <div id="picklistchecklist" class="picklistflyoutOverlayContentValue"></div>
