--- a/configformhtml.html
+++ b/configformhtml.html
@@ -7,6 +7,8 @@
     <link href="dcrmeg_spectrum" rel="stylesheet" />
     
     <script src="dcrmeg_jquery2" type="text/javascript"></script>
+    <!-- Jquery Mousewheel -->
+    <script src="dcrmeg_jqmw"></script>
     <script src="dcrmeg_jqdtpj"></script>
     <script src="dcrmeg_aes"></script>
     <script src="dcrmeg_xrmservicetoolkit"></script>
