--- a/configformhtml.html
+++ b/configformhtml.html
@@ -140,6 +140,14 @@
                             </select>
                         </div>
                     </div>
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label for="datetimeeditorminutestep" class="ElipseText" id="datetimeeditorminutesteplabel">Date time editor minute step</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <input type="text" title="12:05, 12:10, 12:15, ..." id="datetimeeditorminutestep" maxlength="2" style="width: 35px;" />
+                        </div>
+                    </div>
                     <div class="group displaynone" id="maincontentsect2">
                         <table style="margin-top:15px;padding:5px;border:solid 1px lightgray;">
                             <tbody>
