D CRM Editable Grid 1.0.5.5 Commit
Bug fixes:

- The export to Excel functionality does not export the headers of the
columns.
- Able to create new records with empty requiered fields
- Double type fields causing type mismatch error
- Aggregates don't work with filters
- Date-Time format not recognized if it's not in MM/DD/YYYY (Australia)
- Picklist value cannot be assigned IE10
- Replaced optionset editor. Clicking or tabbing will cause the editor
to display with the drop down portion opened.
- Add "RowBackgroundColor" property to "DCrmEgGridRowOnload::RowData"
callback parameter allowing setting of the row background color.
- distinct record fetching added to configuration

--- a/DCrmEditableGridIHtml.html
+++ b/DCrmEditableGridIHtml.html
@@ -16,7 +16,7 @@
     <script src="dcrmeg_xrmservicetoolkit"></script>
     <!-- Xdate -->
     <script src="dcrmeg_xdate"></script>
-    <!-- Select2 -->
+    <!-- Select2 jquery.selectric.min -->
     <script src="dcrmeg_select2js"></script>
     <!-- JSZip - A Javascript class for generating and reading zip files -->
     <script src="dcrmeg_jszip"></script>
@@ -201,7 +201,7 @@
                 <input type="text" id="fieldfilter_stringinput" class="filterbtnwidth hidefilters" />
                 <div id="fieldfilter_lookupinput" class="hidefilters"></div>
                 <div style="margin-bottom:5px;"><input type="text" id="fieldfilter_extrainput" class="filterbtnwidth hidefilters" /></div>
-                <input type="text" id="fieldfilter_calendarinput" />
+                <input type="text" style="border: none;" readonly="readonly" id="fieldfilter_calendarinput" />
                 <div id="fieldfilter_optionscontainer" class="hidefilters"><select id="fieldfilter_optionsetselect" class="selectfilter multiselectoptions" multiple="multiple"></select></div>
            </div>
 
