--- a/configformhtml.html
+++ b/configformhtml.html
@@ -198,6 +198,16 @@
                         <input type="checkbox" checked="checked" id="allowcreate_check" />
                     </div>
                 </div>
+
+                <div class="group">
+                    <div class="col span_2_of_3">
+                        <label id="distinctvalues_label" class="ElipseText" for="distinctvalues_check">Distinct values</label>
+                    </div>
+                    <div class="col span_1_of_4">
+                        <input type="checkbox" id="distinctvalues_check" />
+                    </div>
+                </div>
+
                 <div class="group">
                     <div class="col span_2_of_3">
                         <label id="allowdelete_label" class="ElipseText" for="allowdelete_check">Allow delete</label>
