--- a/configformhtml.html
+++ b/configformhtml.html
@@ -148,6 +148,22 @@
                             <input type="text" title="12:05, 12:10, 12:15, ..." id="datetimeeditorminutestep" maxlength="2" style="width: 35px;" />
                         </div>
                     </div>
+
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label title="Currency precision that is used for pricing throughout the system" for="systemcurrencyprecision" class="ElipseText" id="systemcurrencyprecisionlabel">System currency decimal precision for pricing</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <select id="systemcurrencyprecision" class="displayonentityclass">
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                                <option value="2" selected="selected">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                        </div>
+                    </div>
+
                     <div class="group displaynone" id="maincontentsect2">
                         <table style="margin-top:15px;padding:5px;border:solid 1px lightgray;">
                             <tbody>
