--- a/configformhtml.html
+++ b/configformhtml.html
@@ -148,7 +148,6 @@
                             <input type="text" title="12:05, 12:10, 12:15, ..." id="datetimeeditorminutestep" maxlength="2" style="width: 35px;" />
                         </div>
                     </div>
-
                     <div class="group">
                         <div class="col span_2_of_3">
                             <label title="Currency precision that is used for pricing throughout the system" for="systemcurrencyprecision" class="ElipseText" id="systemcurrencyprecisionlabel">System currency decimal precision for pricing</label>
@@ -163,7 +162,6 @@
                             </select>
                         </div>
                     </div>
-
                     <div class="group displaynone" id="maincontentsect2">
                         <table style="margin-top:15px;padding:5px;border:solid 1px lightgray;">
                             <tbody>
@@ -314,7 +312,14 @@
                         <input type="checkbox" id="pastefromexcel_check" />
                     </div>
                 </div>
-
+                <div class="group">
+                    <div class="col span_2_of_3">
+                        <label title="Default false. Ellipses are used to shorten the title display" id="gridtitlewordwraplabel" class="ElipseText" for="gridtitlewordwrap">Grid header title word wrap</label>
+                    </div>
+                    <div class="col span_1_of_4">
+                        <input type="checkbox" id="gridtitlewordwrap" />
+                    </div>
+                </div>
             </div>
 
         </div>
