Started refactoring by moving prototype type decorators to a separate file

--- a/DCrmEditableGridIHtml.html
+++ b/DCrmEditableGridIHtml.html
@@ -24,7 +24,8 @@
     <script src="dcrmeg_pdfmake"></script>
     <!-- pdfmakefonts -->
     <script src="dcrmeg_pdfmakefonts"></script>
-    <!--<script src="dcrmeg_webapisdk"></script>-->
+    <!-- TypeDecorators.js -->
+    <script src="dcrmeg_typedecorators"></script>
     <!-- dcrmeditabletablegrid -->
     <script src="dcrmeg_dcrmeg"></script>
 
